tests/positive/07_not.tex
\documentclass[a4paper,11pt]{article}
\usepackage[utf8]{inputenc}
\usepackage[francais]{babel}

% --- START - HEADER TO SUPPORT TexSci ALGORITHMS IN LaTeX DOCUMENTS
\usepackage[vlined,ruled]{algorithm2e}
\usepackage{amssymb}
\usepackage{amsmath,alltt}
\newenvironment{texsci}[1]{%
\vspace{1cm}
\renewcommand{\algorithmcfname}{Algorithm}
\begin{algorithm}[H]
\label{#1}
\caption{#1}
\SetKwInOut{Constant}{Constant}
\SetKwInOut{Input}{Input}
\SetKwInOut{Output}{Output}
\SetKwInOut{Global}{Global}
\SetKwInOut{Local}{Local}
}{%
\end{algorithm}
\vspace{1cm}
}
\newcommand{\true}{\mbox{\it true}}
\newcommand{\false}{\mbox{\it false}}
\newcommand{\Boolean}{\{\true,\false\}}
\newcommand{\Integer}{\mathbb{Z}}
\newcommand{\Real}{\mathbb{R}}
% --- END - HEADER TO SUPPORT TexSci ALGORITHMS IN LaTeX DOCUMENTS

\title{TexSci Test Suite -- Test 05\\ Arithméthique simple}
\date{}

\begin{document}
\maketitle

Test d'affectations et de calculs simples.

\begin{texsci}{main}
\Local{$a \in \Integer, b \in \Integer$}
\BlankLine

$\mbox{printText($"Doit afficher 0, 1"$)}$\;

$a \leftarrow \neg 1$\;

$b \leftarrow \neg 0.0$\;

\eIf{$a = 0 \wedge b = 1$}{
  $\mbox{printInt($1$)}$\;
}{
  $\mbox{printInt($0$)}$\;
}
\end{texsci}

\end{document}
