tests/negative/type_issues7.tex
\documentclass[a4paper,11pt]{article}
\usepackage[utf8]{inputenc}
\usepackage[francais]{babel}

% --- START - HEADER TO SUPPORT TexSci ALGORITHMS IN LaTeX DOCUMENTS
\usepackage[vlined,ruled]{algorithm2e}
\usepackage{amssymb}
\usepackage{amsmath,alltt}
\newenvironment{texsci}[1]{%
\vspace{1cm}
\renewcommand{\algorithmcfname}{Algorithm}
\begin{algorithm}[H]
\label{#1}
\caption{#1}
\SetKwInOut{Constant}{Constant}
\SetKwInOut{Input}{Input}
\SetKwInOut{Output}{Output}
\SetKwInOut{Global}{Global}
\SetKwInOut{Local}{Local}
}{%
\end{algorithm}
\vspace{1cm}
}
\newcommand{\true}{\mbox{\it true}}
\newcommand{\false}{\mbox{\it false}}
\newcommand{\Boolean}{\{\true,\false\}}type_issues3
% --- END - HEADER TO SUPPORT TexSci ALGORITHMS IN LaTeX DOCUMENTS

\title{TexSci Test Suite -- Test 03\\ Print 42}
\date{}

\begin{document}
\maketitle

Test devant échouer car on devrait pas pouvoir mettre d'int dans un tableau de float

\begin{texsci}{main}
\Local{$A \in \Real^{8}$}
\BlankLine
$A_{0} \leftarrow 0.0 \wedge 0.0$\;
\end{texsci}

\end{document}
